--- a/templates/___map_popup.html
+++ b/templates/___map_popup.html
@@ -1,5 +1,11 @@
-<div class="py-2">
-  <div class="w-52 h-auto"><img class="rounded-md w-full h-full" src="/static/restaurant_images/{{ restaurant_image_name }}" alt="Restaurant image"/></div>
-  <h3 class="text-lg font-bold py-2">{{ restaurant_name }}</h3>
-  <a class="font-bold pb-2" href="/customer/restaurant/{{ restaurant_pk }}">See more</a>
+<div class="flex flex-col items-center w-56 py-2">
+  <div class="w-full h-32 overflow-hidden flex justify-center items-center rounded-lg">
+    <img class="h-full w-full object-cover" src="/static/restaurant_images/{{ restaurant_image_name }}" alt="Restaurant image"/>
+  </div>
+  <div class="w-full">
+    <h3 class="text-lg font-bold pt-2">{{ restaurant_name }}</h3>
+    <p class=" text-zinc-500 text-sm font-light m-0 p-0">{{ restaurant_street }}, {{ restaurant_postalcode }} {{ restaurant_city }}</p>
+    <p class=" text-zinc-500 text-sm font-light m-0 p-0"></p>
+  </div>
+  <a class="btn-secondary" href="/customer/restaurant/{{ restaurant_pk }}">See more</a>
 </div>
