--- a/templates/view_customer.html
+++ b/templates/view_customer.html
@@ -1,16 +1,14 @@
 {% include "_top_logged.html" %}
 
 <main class="w-full flex gap-5 px-20">
-    <div id="map" class="w-full h-screen rounded-xl"></div>
+    <div id="map" class="w-full h-full rounded-xl"></div>
 
-    <div class="w-full h-fit">
-
+    <div class="w-full h-full">
         <h1 class="text-5xl font-bold">Welcome back {{ user.account_name }}!</h1>
         <div class="pt-10 px-4">
             <h2 class="text-2xl font-semibold mb-6">All restaurants</h2>
-            
             {% if address %}
-                <div class="h-96 overflow-y-auto">
+                <div class="h-[35rem] overflow-y-auto">
                     <ul class="space-y-4">
                         {% for addr in address %}
                             <li class="bg-white p-4 gap-3 flex rounded-lg shadow-md hover:shadow-lg transition-shadow">
@@ -27,8 +25,6 @@
                 <p class="text-gray-500">No addresses available.</p>
             {% endif %}
         </div>
-        
-        
     </div>
 </main>
 
